--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -42,7 +42,7 @@
         </div>
       </section>
         <div class="about">
-            <img align="center" class="fa-pic" src="assets/images/pic.jpg" alt="" />
+            <img align="center" class="fa-pic" src="assets/images/pic.JPG" alt="" />
             <p align="center" class="list">
             <strong>Glen John Gerandoy<br></strong>
             Bachelor of Science in Computer Engineering
